# versionfile

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md  terminalizer.yml  versions.yaml
.github/workflows/: build.yml  release.yml  rust.yml
src/: main.rs
