[package]
name = "versionfile"
version = "2.2.0"
authors = ["Stefan Weisser <stefan.weisser@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.30", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
semver = "0.11"
cargo_toml = "0.9.1"
