[package]
name = "versionfile"
version = "3.0.0"
authors = ["Stefan Weisser <stefan.weisser@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
semver = "1.0.22"
cargo_toml = "0.19.2"
